Update build.gradle files for Artemis and Gateway project. Extract common depenedncies and tasks into separate gradle files